# ofxSiliconRetina

./: .gitignore  CLAUDE.md  README.md  README_DEPLOY.md  addon_config.mk  addons.make  config.make  license.md
docs/: Doxyfile
example_dvs/: README.md  addons.make  config.make
example_siliconretina/: addons.make
example_siliconretinaGui/: addons.make  config.make
example_siliconretinaGuiMultiWindows/: addons.make
example_siliconretinaIntensity/: addons.make
example_siliconretinamesh/: addons.make
libs/libcaer/include/: CMakeLists.txt  Makefile  cmake_install.cmake  frame_utils.h  libcaer.h  libcaer.h.in  log.h  network.h  portable_endian.h  ringbuffer.h
libs/libcaer/include/devices/: davis.h  device.h  device_discover.h  dvs128.h  dvs132s.h  dvxplorer.h  dynapse.h  edvs.h  samsung_evk.h  serial.h  usb.h
libs/libcaer/include/events/: common.h  config.h  ear.h  frame.h  imu6.h  imu9.h  matrix4x4.h  packetContainer.h  point1d.h  point2d.h  point3d.h  point4d.h  polarity.h  sample.h  special.h  spike.h
libs/libcaer/include/filters/: dvs_noise.h
libs/libcaer/include/libcaer/: CMakeLists.txt  Makefile  cmake_install.cmake  libcaer.h  libcaer.h.in  portable_endian.h
libs/libcaer/include/libcaer/devices/: imu_support.h  serial.h
libs/libcaer/include/libcaer/events/: imu6.h  imu9.h  packetContainer.h  special.h  spike.h
libs/libcaer/include/libcaercpp/: CMakeLists.txt  Makefile  cmake_install.cmake  ringbuffer.hpp
libs/libcaer/include/libcaercpp/devices/: davis.hpp  device_discover.hpp  dvs128.hpp  dvxplorer.hpp  edvs.hpp  samsung_evk.hpp  usb.hpp
libs/libcaer/include/libcaercpp/events/: imu9.hpp  packetContainer.hpp  polarity.hpp  special.hpp
libs/libcaer/include/libcaercpp/filters/: dvs_noise.hpp
libs/libcaer/includecpp/: CMakeLists.txt  Makefile  cmake_install.cmake  libcaer.hpp  network.hpp  ringbuffer.hpp
libs/libcaer/includecpp/devices/: davis.hpp  device.hpp  device_discover.hpp  dvs128.hpp  dvs132s.hpp  dynapse.hpp  edvs.hpp  serial.hpp  usb.hpp
libs/libcaer/includecpp/events/: common.hpp  config.hpp  ear.hpp  frame.hpp  imu6.hpp  imu9.hpp  matrix4x4.hpp  packetContainer.hpp  point1d.hpp  point2d.hpp  point3d.hpp  point4d.hpp  polarity.hpp  sample.hpp  special.hpp  spike.hpp  utils.hpp
libs/libcaer/includecpp/filters/: dvs_noise.hpp
libs/libcaer/includecpp/libcaer/: Makefile  cmake_install.cmake  frame_utils.h
libs/libcaer/includecpp/libcaer/devices/: davis.h  device.h  dvs132s.h  dvxplorer.h  samsung_evk.h
libs/libcaer/includecpp/libcaer/events/: common.h  frame.h  polarity.h
libs/libcaer/includecpp/libcaercpp/: Makefile  cmake_install.cmake  libcaer.hpp  network.hpp
libs/libcaer/includecpp/libcaercpp/devices/: device.hpp  dvs132s.hpp  dynapse.hpp  serial.hpp
libs/libcaer/includecpp/libcaercpp/events/: common.hpp  frame.hpp  imu6.hpp  spike.hpp  utils.hpp
libs/libcaer/src/: .gitignore  CMakeLists.txt  Makefile  autoexposure.c  autoexposure.h  c11threads_posix.h  cmake_install.cmake  container_generation.h  data_exchange.h  davis.c  davis.h  davis_common.c  davis_common.h  davis_fx2.c  davis_fx2.h  davis_fx3.c  davis_fx3.h  device.c  device_discover.c  dvs128.c  dvs128.h  dynapse.c  dynapse.h  edvs.h  events.c  filters_dvs_noise.c  frame_utils.c  frame_utils_opencv.cpp  log.c  portable_aligned_alloc.h  portable_time.h  ringbuffer.c  spi_config_interface.h  threads_ext.h  timestamps.h  usb_utils.c  usb_utils.h
libs/libcaer/src/ringbuffer/: portable_aligned_alloc.h  ringbuffer.c
src/: RectangularClusterTracker.cpp  RectangularClusterTracker.hpp  (+13 more)
(+46 files in other folders)
