CONFIGURE_FILE(libcaer.h.in ${CMAKE_CURRENT_SOURCE_DIR}/libcaer.h @ONLY)

SET(INC_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME})
INSTALL(FILES libcaer.h log.h network.h portable_endian.h frame_utils.h ringbuffer.h DESTINATION ${INC_INSTALL_DIR})
INSTALL(DIRECTORY events DESTINATION ${INC_INSTALL_DIR} FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY devices DESTINATION ${INC_INSTALL_DIR} FILES_MATCHING PATTERN "*.h")
